<resources>
    <string name="app_name">jpeard-FuelTrack</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="edit">View and Edit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="editing">Enter the index of the entry to edit.</string>
    <string name="title_activity_add_log">AddLogActivity</string>
    <string name="addDate">Enter the date as YYYY-MM-DD</string>
    <string name="addStation">Enter the Station Name</string>
    <string name="addOdometer">Enter the Odometer reading in km to 1 decimal place</string>
    <string name="addFuelGrade">Enter the grade of fuel purchased</string>
    <string name="addFuelAmount">Enter the amount of fuel purchased in Litres to 3 decimal places</string>
    <string name="addUnitCost">Enter the cost of fuel purchased in cents/Litre to 1 decimal place</string>
    <string name="fuelCost">The total cost of fuel was</string>
</resources>
